# ABIDE

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Development_Plan_Final.md  PROJECT.md  README.md  eslint.config.js  fix-gpu-permission.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: dev.sh
src/: App.tsx  app.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  create_icns.sh  generate_icons.py  icon.icns
src-tauri/src/: main.rs
src-tauri/src/api/: handlers.rs  mod.rs  routes.rs  websocket.rs
src-tauri/src/commands/: file_operations.rs  mod.rs  project_management.rs  settings.rs
src-tauri/src/state/: config.rs  mod.rs  vfs.rs
src-tauri/src/utils/: logging.rs
src/components/Cursor/: CursorController.tsx  cursor.css  index.tsx
src/components/Editor/: editor.css  index.tsx
src/components/FileExplorer/: FileTreeNode.tsx  fileExplorer.css  index.tsx
src/components/PreviewPanel/: index.tsx  previewPanel.css
src/components/TypingAnimation/: index.tsx  typingAnimation.css
src/lib/: tauri.ts
src/pages/: AnimationDemo.tsx  CursorControlDemo.tsx  animationDemo.css  cursorControlDemo.css
src/services/: mcpClient.ts
src/shared/: types.ts
src/store/: editorStore.ts  fileStore.ts  index.ts  previewStore.ts
