[workspace]
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
authors = ["CodingButter"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-build = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1"
anyhow = "1.0"
thiserror = "2.0"